# swe-bench-util

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
scripts/: file_hint.sh
swe_bench_util/: __main__.py  assistants.py  cli.py  file_hint_eval.py
swe_bench_util/index/: astra_assistants.py  file_util.py
test/: test_cli.py  test_file_hint_eval.py
